# OSCAR_GARCIA_PANIZO

./: CMakeLists.txt  Minformacion.h  OSCAR_GARCIA_PANIZO.cpp  OSCAR_GARCIA_PANIZO.h  README.md  archivo.cpp  archivo.h  citas.cpp  citas.h  madicos.cpp  medicos.cpp  medicos.h  pacientes.cpp  pacientes.h
